tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.types
=== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndGenericClassStaticFunctionOfTheSameName.ts ===
class clodule<T> {
>clodule : clodule<T>
>T : T

    id: string;
>id : 文字
>类型别名 :=> 文字

    value: T;
>value : T
>T : T

    static fn<U>(id: U) { }
>fn : <U>(id: U) => 无值
>U : U
>id : U
>U : U
}

module clodule {
>clodule : 类为 clodule

    // error: duplicate identifier expected
    export function fn<T>(x: T, y: T): T {
>fn : <T>(x: T, y: T) => T
>T : T
>x : T
>T : T
>y : T
>T : T
>T : T

        return x;
>x : T
    }
}


